# eyerie-ogitor-fork

./: .hgignore  .hgtags  CMakeLists.txt  README.md
Ogitor/include/: CameraEditor.h  EntityEditor.h  NodeEditor.h  OgitorsDefinitions.h  OgitorsSystem.h  OgitorsUtils.h  ParticleEditor.h  SceneManagerEditor.h
Ogitor/src/: CameraEditor.cpp  EntityEditor.cpp  FolderEditor.cpp  MarkerEditor.cpp  NodeEditor.cpp  OgitorsPaging.cpp  OgitorsRootUtilityFunctions.cpp  OgitorsSceneSerializer.cpp  PGInstanceManager.cpp  PlaneEditor.cpp  SceneManagerEditor.cpp  TerrainGroupEditor.cpp  TerrainPageEditor.cpp  ViewportEditor.cpp  ViewportEditorEvents.cpp
Plugins/DotSceneSerializer/: DotSceneSerializerExport.cpp
Plugins/OgCaelum/: CaelumEditor.cpp  CaelumEditor.h
Plugins/OgHydrax/: HydraxWaterEditor.cpp  HydraxWaterEditor.h
Plugins/OgSkyx/: SkyxEditor.cpp  SkyxEditor.h
RunPath/: CMakeLists.txt
RunPath/Media/EditorResources/SKYX/: SkyX.material  SkyX_Clouds.fragment  SkyX_Clouds.vertex  SkyX_Ground.fragment  SkyX_Ground.vertex  SkyX_Moon.fragment  SkyX_Moon.vertex  SkyX_Skydome.fragment  SkyX_VolClouds.fragment
RunPath/Media/particle/: system_circle.material  system_circle_r.mesh
RunPath/Media/plants/: system_circle.mesh
SceneLoader/: CMakeLists.txt
SceneLoader/include/: DotSceneLoader.h
SceneLoader/src/: DotSceneLoader.cpp  SampleApp.cpp
qtOgitor/: CMakeLists.txt  settingsdialog.ui
qtOgitor/include/: magickwidget.hxx  mainwindow.hxx  qtogitorsystem.h
qtOgitor/src/: magickwidget.cpp  mainwindow.cpp  mainwindowactions.cpp  objectsview.cpp  ogrewidget.cpp  qtogitorsystem.cpp  settingsdialog.cpp
